feat: 트레이너 지도 리스트 API 구현 - 마커 캐시에 이름, 시설명, 가격, 경력 추가 - /api/trainers/maps/summaries 커서 페이징 적용(cursor, size) - /api/trainers/maps/markers 응답 DTO를 TrainerMarker로 교체